@@ -1,4 +1,4 @@
 # This file can be included by a Doxygen configuration file to set the
 # project version number and by makefiles to accomplish the same.
 
-PROJECT_NUMBER = 0.20
+PROJECT_NUMBER = 0.21
